@@ -1,5 +1,8 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.507 2006/01/16 07:18:28 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.508 2006/01/16 14:47:01 rocket Exp $
+
+  16 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
+  Attempt to fix bug 117649
 
   16 Jan 2006; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
